[gd_scene load_steps=8 format=3 uid="uid://caupvqx3slsja"]

[ext_resource type="Script" path="res://script/unit.gd" id="1_oucid"]
[ext_resource type="Material" uid="uid://da41ubvluphwa" path="res://resources/team_1.tres" id="2_lw5bt"]

[sub_resource type="BoxMesh" id="BoxMesh_s6m8f"]
material = ExtResource("2_lw5bt")

[sub_resource type="SphereShape3D" id="SphereShape3D_0570p"]
radius = 0.4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_75dgn"]
transparency = 1
albedo_color = Color(0.27451, 1, 1, 0.223529)

[sub_resource type="CylinderMesh" id="CylinderMesh_c32s8"]
material = SubResource("StandardMaterial3D_75dgn")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dr7ca"]
height = 1.5
radius = 0.943326

[node name="unit" type="CharacterBody3D" groups=["unit_group"]]
script = ExtResource("1_oucid")

[node name="mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.543851, 0, 0, 0, 1.03783, 0, 0, 0, 0.599104, 0, 0.527969, 0)
mesh = SubResource("BoxMesh_s6m8f")

[node name="Collision_box" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("SphereShape3D_0570p")

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.1
target_desired_distance = 0.1
path_height_offset = 0.25
path_max_distance = 6.61
avoidance_enabled = true
max_neighbors = 60
max_speed = 30.0

[node name="selection_ring" type="MeshInstance3D" parent="."]
transform = Transform3D(3.75529, 0, 0, 0, 0.0304337, 0, 0, 0, 3.72657, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_c32s8")

[node name="timer" type="Timer" parent="."]
one_shot = true

[node name="navigation_timer" type="Timer" parent="."]

[node name="RayCast" type="RayCast3D" parent="."]

[node name="Area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.773468, 0)
shape = SubResource("CylinderShape3D_dr7ca")
disabled = true

[connection signal="navigation_finished" from="NavigationAgent" to="." method="_on_navigation_agent_navigation_finished"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area" to="." method="_on_area_3d_body_entered"]
